less/header.less
#istex__web-header {
  position:         relative;
  z-index:          1000;
  margin:           0 auto;
  border-bottom:    1px solid @navbar-border-color;
  padding:          0 10%;
  background-color: white;
  font-family:      Arial, Helvetica, sans-serif;
}

img {
  vertical-align: middle;
}

.clear { clear: both }

.logoistex {
  position: absolute;
  margin:   3px 0 0 0;
}

nav {
  & > .istex__navbar {
    position:        relative;
    float:           right;
    margin:          9px 50px 0 0;
    font-size:       .8em;
    list-style-type: none;

    a {
      display:         block;
      color:           #000;
      text-align:      center;
      text-decoration: none;

      &.disabled {
        color:           #777;
        text-decoration: none;
        cursor:          not-allowed;
      }

      &:hover,
      &:active {
        text-decoration: underline;
      }
      & > img,
      & > .fa {
        margin-right: .33em;
      }
      & > .fa {
        color:           #458ca6;
        text-decoration: none;
      }
    }

    li {
      height:      30px;
      line-height: 30px;
    }

    & > li {
      float:        left;
      position:     relative;
      margin-right: 10px;
    }

    .istex__dropdown-menu {
      position:        absolute;
      display:         none;
      border:          1px solid @navbar-border-color;
      width: 140px;
      background-color: #fff;
      list-style-type: none;
      & > li {
        padding: 0 10px;
      }
      & > li + li { border-top: 1px solid @navbar-border-color; }
    }
    .istex__dropdown:hover > .istex__dropdown-menu {
      display: block;
    }
  }
}

